--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,477 +1,34 @@
-// import
-@import 'variables.scss';
-@import 'mixins.scss';
-@import 'components.scss';
+// abstracts
+@import './abstracts/variables.scss';
+@import './abstracts/mixins.scss';
 
+// base
+@import './base/base.scss';
 
-// Header
-.header {
-  padding: 50px 0;
-  background: $color-primary;
-  display: flex;
-  justify-content: space-between;
-  &__logo {
-    text-transform: uppercase;
-    color: $color-secondary;
-    font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 0.0554719em;
-    cursor: pointer;
-    align-self: center;
-    margin-left: 10%;;
-  }
-  .nav {
-    display: flex;
-    margin-right: 10%;
-    align-items: center;
-    &__container {
-      display: flex;
-      width: 318px;
-      justify-content: space-between;
-      margin-right: 50px;
-    }
-    &__link {
-      font-size: $large-font-size;
-      line-height: 21px;
-      letter-spacing: 0.0555556em;
-      text-transform: uppercase;
-      &:hover {
-        color: $color-secondary;
-      }
-    }
-    &__btn {
-      width: 180px;
-      height: 48px;
-      color: $color-white;
-      border: 2px solid $color-white;
-      letter-spacing: 0.05em;
-      &:hover {
-        color: $color-secondary;
-        border-color: $color-secondary;
-      }
-      &:active {
-        transform: translateY(2px);
-      }
-    }
-  }
-}
+// components
+@import './components/buttons.scss';
+@import './components/card.scss';
+@import './components/form.scss';
+@import './components/container.scss';
+@import './components/title.scss';
 
-
-// Banner
-.banner{
-  padding: 490px 0;
-  position: relative;
-  background: {
-    image: url("../img/Background.png");
-    size: cover;
-    repeat: no-repeat;
-  }
-  mix-blend-mode: normal;
-  opacity: 0.8;
-  z-index: 1;
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0; right: 0;
-    top: 0; bottom: 0;
-    background: $color-secondary;
-    mix-blend-mode: color;
-    z-index: -1;
-  }
-  &__container {
-    position: absolute;
-    top: 50%;
-    @include align-center();
-    &--icon {
-      width: 80px;
-      height: 80px;
-      background-color: $color-primary;
-      cursor: pointer;
-      position: relative;
-      border-radius: 50%;
-    }
-  }
-  &__content {
-    text-align: center;
-    margin-top: 20px;
-  }
-  &__form {
-    text-align: center;
-    margin-top: 50px;
-  }
-  &__email {
-    width: 270px;
-    height: 48px;
-    border: 1px solid $color-primary;
-    border-radius: 4px;
-    padding-left: 20px;
-    background-color: inherit;
-    margin-right: 15px;
-  }
-  &__btn {
-    border: 2px solid $color-primary;
-    &:hover {
-      transform: translateY(-2px);
-    }
-    &:active {
-      transform: translateY(2px);
-    }
-  }
-  &__footer {
-    display: flex;
-    justify-content: space-around;
-    max-width: 480px;
-    margin: auto;
-    margin-top: 100px;
-  }
-  &__icon {
-    position: absolute;
-    top: 50%;
-    @include align-center();
-  }
-}
-
-
-// Our team
-.team{
-  padding: 50px 0 100px;
-  &__title {
-    padding-bottom: 50px;
-  }
-  &__container {
-    max-width: max-content;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 100px 50px;
-    &--member {
-      display: flex;
-    }
-  }
-  &__image {
-    align-self: flex-start;
-  }
-  &__content {
-    padding-left: 20px;
-  }
-  &--name {
-    font-size: $large-font-size;
-    line-height: 26px;
-  }
-  &--division {
-    font-size: $default-font-size;
-    line-height: 26px;
-  }
-  &__des {
-    max-width: 264px;
-    padding-top: 20px;
-  }
-}
-
-
-// Pricing
-.pricing {
-  background: $color-primary;
-  padding: 50px 0 100px;
-  &__title {
-    padding-bottom: 50px;
-    color: $color-white;
-  }
-  &__container {
-    max-width: max-content;
-    display: grid;
-    margin: auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
-  }
-}
-
-
-// Testimonials
-.testimonial {
-  position: relative;
-  padding: 100px 250px;
-  text-align: center;
-  &__container {
-    display: flex;
-    justify-content: center;
-    &--prev {
-      align-self: center;
-      padding-right: 20%;
-    }
-    &--next {
-      align-self: center;
-      padding-left: 20%;
-    }
-    .prev, .next{
-      cursor: pointer;
-    }
-  }
-  &__image {
-    border-radius: 50%;
-    border: 4px solid $color-secondary;
-  }
-  &__name {
-    padding: 25px;
-    font-size: $large-font-size;
-    line-height: $large-line-height;
-  }
-  &__content {
-    max-width: 555px;
-    margin: auto;
-    padding-bottom: 50px;
-  }
-  .dotnav {
-    max-width: 150px;
-    display: flex;
-    margin: auto;
-    justify-content: space-around;
-    .dot {
-      width: 14px;
-      height: 14px;
-      border: 2px solid $color-primary;
-      border-radius: 50%;
-      cursor: pointer;
-      &--active {
-        background-color: $color-primary;
-      }
-    }
-  }
-}
-
-
-//advantages
-.advantage {
-  background: $color-primary;
-  padding: 50px 0 100px;
-  &__title {
-    padding-bottom: 20px;
-    color: $color-white;
-  }
-  &__content {
-    color: $color-white;
-    max-width: 430px;
-    margin: auto;
-    padding-bottom: 30px;
-  }
-  &__container {
-    max-width: max-content;
-    display: grid;
-    margin: auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
-  }
-}
-
-
-// Project
-.project {
-  padding: 50px 0 100px;
-  &__locative {
-    padding: 10px 0 20px;
-    display: flex;
-    max-width: 850px;
-    justify-content: space-around;
-    margin: auto;
-    text-transform: uppercase;
-    font-size: $large-font-size;
-    line-height: $large-line-height;
-    letter-spacing: 0.0555556em;
-    align-items: flex-end;
-  }
-  &__city {
-    max-width: 100px;
-    text-align: center;
-  }
-  &__container {
-    max-width: max-content;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: auto;
-    grid-gap: 15px 30px;
-  }
-  &__image {
-    cursor: pointer;
-    &:hover {
-      transform: translate(-3px,-3px);
-      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5);
-    }
-  }
-}
-
-
-// Sign up
-.sign-up {
-  padding: 70px 0 50px;
-  background: {
-    image: linear-gradient(0deg, rgba(75, 75, 75, 0.3),
-     rgba(75, 75, 75, 0.3)), url(../img/background_sign-up.png);
-    repeat: no-repeat;
-    size: cover;
-  }
-  &__title {
-    color: $color-white;
-    padding-bottom: 30px;
-  }
-  &__container {
-    max-width: max-content;
-    margin: auto;
-  }
-}
-
-
-// Contact us
-.contact-us {
-  padding: 100px 0;
-  &__title {
-    padding-bottom: 50px;
-  }
-  &__container {
-    width: max-content;
-    margin: auto;
-    display: grid;
-    grid-template-columns:  1fr 2fr 1fr;
-  }
-  &__card {
-    margin: auto;
-  }
-  .container__icon {
-    width: 20px;
-    height: 20px;
-  }
-  &__contact {
-    display: flex;
-    padding-bottom: 25px;
-  }
-   &__name {
-    font-size: $large-font-size;
-    line-height: 30px;
-    padding-bottom: 20px;
-  }
-  &__content {
-    padding-left: 15px;
-    max-width: 234px;
-  }
-  &__credit {
-    &--content {
-      width: 263px;
-      padding-bottom: 50px;
-    }
-  }
-  &__follow {
-    max-width: max-content;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 24px 35px;
-  }
-}
-
-
-// Map
-.map {
-  height: 400px;
-  background-color: $color-map;
-  position: relative;
-  &__address {
-    background: linear-gradient(185.03deg, rgba(255, 255, 255, 0.301404)
-     5.01%, rgba(255, 255, 255, 0.0001) 91.53%), $color-secondary;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-    width: 190px;
-    padding: 20px;
-    font-size: 12px;
-    line-height: 14px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    &::before {
-      content: "";
-      position: absolute;
-      top: 85%;
-      width: 15px;
-      background-color: $color-secondary;
-      transform: rotate(45deg);
-      height: 15px;
-      left: 50%;
-      box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-    }
-  }
-}
-
-
-// Footer
-.footer {
-  padding: 50px 0;
-  background-color: $color-primary;
-  &__container {
-    max-width: max-content;
-    margin: auto;
-    display: grid;
-  }
-  &__contact {
-    grid-area: 1/1/2/3;
-    &--container {
-      display: flex;
-      width: 350px;
-      justify-content: space-between;
-    }
-    &--address {
-      max-width: 133px;
-    }
-  }
-  &__follow {
-    padding: 0 100px;
-  }
-  &__icon {
-    opacity: 0.5;
-    width: 165px;
-    display: flex;
-    justify-content: space-between;
-  }
-  &__about {
-    grid-area: 1/4/2/6;
-    &--content {
-      max-width: 360px;
-    }
-  }
-  hr {
-    grid-area: 2/1/3/6;
-    width: -webkit-fill-available;
-    width: -moz-available;
-    opacity: 0.5;
-    margin: 35px 0;
-  }
-  &__nav {
-    grid-area: 3/2/4/5;
-    display: flex;
-    margin: auto;
-    width: 500px;
-    text-transform: uppercase;
-    font-size: $large-font-size;
-    line-height: $default-line-height;
-    letter-spacing: 0.0555556em;
-    justify-content: space-around;
-  }
-  //footer component
-  &__name {
-    color: $color-white;
-    font-size: $large-font-size;
-    line-height: $default-line-height;
-    text-transform: uppercase;
-    padding-bottom: 25px;
-  }
-  &__content {
-    color: $color-white;
-    opacity: 0.5;
-    font-size: $default-font-size;
-    line-height: $default-line-height;
-  }
-}
+// Layout
+@import 'layout/header.scss';
+@import 'layout/banner.scss';
+@import 'layout/team.scss';
+@import 'layout/pricing.scss';
+@import 'layout/testimonials.scss';
+@import 'layout/advantages.scss';
+@import 'layout/project.scss';
+@import 'layout/sign-up.scss';
+@import 'layout/contact.scss';
+@import 'layout/map.scss';
+@import 'layout/footer.scss';
 
 
 // Scroll
-#scrolltop {
-  width: 36px;
-  height: 36px;
+.scroll-top {
+  @include size(36px, 36px);
   position: fixed;
   background-color: $color-secondary;
   bottom: 40px;
@@ -479,7 +36,7 @@
   z-index: 99;
   border-radius: 4px;
   cursor: pointer;
-  #rectangle {
+  .rectangle {
     position: absolute;
     top : 50%;
     @include align-center();
