--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -3,6 +3,9 @@
   &--large{
     @include font(12px, 16px);
   }
+  &--white{
+    color: $color-white;
+  }
   @include respond(tablet){
     @include font(11px, 16px);
     &--large{
@@ -27,6 +30,7 @@
   }
   @include respond(desktop){
     @include font(44px, 48px);
+    letter-spacing: -0.0363636em;
   }
 }
 
