--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import './base/base.scss';
 @import './components/text.scss';
 @import './components/container.scss';
+@import './components/buttons.scss';
 
 @import './layout/header.scss';
 @import './layout/advantage.scss';
+@import './layout/cta.scss';
