--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,3 +9,4 @@
 @import './layout/header.scss';
 @import './layout/advantage.scss';
 @import './layout/cta.scss';
+@import './layout/testimonial.scss';
