--- a/scss/abstracts/_mixin.scss
+++ b/scss/abstracts/_mixin.scss
@@ -34,3 +34,12 @@
   align-items: $align;
   justify-content: $justify;
 }
+
+@mixin after-card {
+  content: "";
+  position: absolute;
+  left: 0; right: 0;
+  top: 0; bottom: 0;
+  border-radius: 8px;
+  z-index: -1;
+}
