--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,6 +9,10 @@
   color: $color-primary;
   border: none;
   cursor: pointer;
+  &--black{
+    background-color: $color-primary;
+    color: $color-white;
+  }
 
   // Devise tablet
   @include respond(tablet){
