--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,10 @@
 @import './components/text.scss';
 @import './components/container.scss';
 @import './components/buttons.scss';
+@import './components/card.scss';
 
 @import './layout/header.scss';
 @import './layout/advantage.scss';
 @import './layout/cta.scss';
 @import './layout/testimonial.scss';
+@import './layout/pricing.scss';
