--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,3 +12,4 @@
 @import './layout/cta.scss';
 @import './layout/testimonial.scss';
 @import './layout/pricing.scss';
+@import './layout/project.scss';
