--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,4 @@
 @import './layout/testimonial.scss';
 @import './layout/pricing.scss';
 @import './layout/project.scss';
+@import './layout/team.scss';
