--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './components/container.scss';
 @import './components/buttons.scss';
 @import './components/card.scss';
+@import './components/form.scss';
 
 @import './layout/header.scss';
 @import './layout/advantage.scss';
@@ -14,3 +15,4 @@
 @import './layout/pricing.scss';
 @import './layout/project.scss';
 @import './layout/team.scss';
+@import './layout/contact.scss';
