--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,3 +1,14 @@
+// color variable
 $color-primary: #4b4b4b;
 $color-secondary: #ebcb80;
 $color-white: #ffffff;
+
+// font-size variable
+
+$font-default-phone: 11px;
+$font-default-tablet: 11px;
+$font-default-desktop: 16px;
+
+$font-large-phone: 12px;
+$font-large-tablet: 12px;
+$font-large-desktop: 18px;
