--- a/scss/layout/_pricing.scss
+++ b/scss/layout/_pricing.scss
@@ -6,8 +6,7 @@
     padding-bottom: 24px;
   }
   &__container{
-    display: grid;
-    grid-template-columns: 1fr;
+    @include grid(grid, 1fr);
     grid-row-gap: 30px;
     margin: auto;
   }
@@ -19,8 +18,7 @@
       padding-bottom: 32px;
     }
     &__container{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      @include grid(grid, 1fr 1fr 1fr);
       grid-column-gap: 43px;
     }
   }
