--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -17,6 +17,7 @@
   & input{
     border: none;
     border-bottom: solid 1px #7d7d7d;
+    color: $color-primary;
   }
   &__button{
     height: 25px;
@@ -55,7 +56,7 @@
       margin-bottom: 58px;
     }
     & input{
-      @include font(18px, 27px)
+      @include font($font-large-desktop, 27px)
     }
     &__button{
       @include size(210px, 48px);
