--- a/scss/layout/_project.scss
+++ b/scss/layout/_project.scss
@@ -4,8 +4,7 @@
     padding-bottom: 12px;
   }
   &__container-item{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    @include grid(grid, 1fr 1fr);
   }
   &__item{
     @include size(145px, 100px);
@@ -26,12 +25,10 @@
   }
   &__wrap-content{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    @include size(100%,100%);
     background: rgba(0,0,0,0.5);
     &--large{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      @include grid(grid, 1fr 1fr);
     }
     opacity: 0;
     &:hover{
@@ -56,10 +53,8 @@
   &__wrap-view,
   &__wrap-like,
   &__wrap-comment {
-    display: flex;
+    @include flex-box(flex, center, space-between);
     width: 45px;
-    justify-content: space-between;
-    align-items: center;
   }
   &__wrap-view{
     width: 55px;
@@ -105,6 +100,9 @@
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     }
   }
+  &__wrap-number--five{
+    display: none;
+  }
 
   // Devise tablet
   @include respond(tablet){
@@ -120,8 +118,7 @@
       position: relative;
       &--large{
         @include size(480px, 240px);
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        @include grid(grid, 1fr 1fr);
       }
       &--white{
         grid-area: 3/2/4/3;
@@ -173,6 +170,9 @@
     &__description{
       margin-bottom: 16px;
       max-width: 200px;
+    }
+    &__wrap-number--five{
+      display: block;
     }
   }
 
