--- a/scss/layout/testimonial.scss
+++ b/scss/layout/testimonial.scss
@@ -5,7 +5,7 @@
     padding-bottom: 10px;
   }
   &__item{
-    display: flex;
+    @include flex-box(flex, null, null);
     margin-bottom: 15px;
   }
   &__wrap-image{
@@ -46,8 +46,7 @@
       padding-bottom: 30px;
     }
     &__container{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      @include grid(grid, 1fr 1fr);
       grid-gap: 0 20px;
     }
     &__wrap-image{
