--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,17 @@
+// import abstract
 @import './abstracts/variables.scss';
 @import './abstracts/mixin.scss';
 
+// Import components
 @import './base/base.scss';
 @import './components/text.scss';
 @import './components/container.scss';
 @import './components/buttons.scss';
 @import './components/card.scss';
 @import './components/form.scss';
+@import './components/nav.scss';
 
+// Import layout
 @import './layout/header.scss';
 @import './layout/advantage.scss';
 @import './layout/cta.scss';
@@ -16,3 +20,4 @@
 @import './layout/project.scss';
 @import './layout/team.scss';
 @import './layout/contact.scss';
+@import './layout/footer.scss';
