--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -1,34 +1,34 @@
-.text{
-  @include font(11px, 16px);
-  &--large{
-    @include font(12px, 16px);
+.text {
+  @include font($font-default-phone, 16px);
+  &--large {
+    @include font($font-large-phone, 16px);
   }
-  &--white{
+  &--white {
     color: $color-white;
   }
-  @include respond(tablet){
-    @include font(11px, 16px);
-    &--large{
-      @include font(12px, 16px);
+  @include respond(tablet) {
+    @include font($font-default-tablet, 16px);
+    &--large {
+      @include font($font-large-tablet, 16px);
     }
   }
 
-  @include respond(desktop){
+  @include respond(desktop) {
     @include font(16px, 24px);
-    &--large{
+    &--large {
       @include font(16px, 32px);
     }
   }
 }
 
-.title{
+.title {
   @include font(20px, 40px);
   letter-spacing: -0.025em;
   text-align: center;
-  @include respond(tablet){
+  @include respond(tablet) {
     @include font(32px, 40px);
   }
-  @include respond(desktop){
+  @include respond(desktop) {
     @include font(44px, 48px);
     letter-spacing: -0.0363636em;
   }
