--- a/scss/layout/testimonial.scss
+++ b/scss/layout/testimonial.scss
@@ -1,80 +1,81 @@
-.testimonial{
+.testimonial {
   // Devise phone
   padding: 30px 0 15px;
-  &__title{
+  &__title {
     padding-bottom: 10px;
   }
-  &__item{
+  &__item {
     @include flex-box(flex, null, null);
     margin-bottom: 15px;
   }
-  &__wrap-image{
+  &__wrap-image {
     @include size(48px, 48px);
     margin: 16px 0 0 9px;
   }
-  &__image{
+  &__image {
     @include size(100%, 100%);
   }
-  &__wrap-content{
+  &__wrap-content {
     padding:6px 0 8px 20px;
   }
-  &__name{
+  &__name {
     line-height: 32px;
     text-transform: uppercase;
   }
-  &__division{
+  &__division {
     line-height: 32px;
     padding-bottom: 16px;
   }
-  &__description{
+  &__description {
     max-width: 200px;
     padding-bottom: 18px;
   }
-  &__icon{
+  &__icon {
     margin-right: 10px;
+    cursor: pointer;
   }
 
-  &__item:hover{
+  &__item:hover {
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
   }
 
   // Devise tablet
-  @include respond(tablet){
+  @include respond(tablet) {
     padding: 40px 0 15px;
-    &__title{
+    &__title {
       padding-bottom: 30px;
     }
-    &__container{
+    &__container {
       @include grid(grid, 1fr 1fr);
       grid-gap: 0 20px;
     }
-    &__wrap-image{
+    &__wrap-image {
       @include size(64px, 64px);
       margin: 24px 0 0 19px;
     }
-    &__wrap-content{
+    &__wrap-content {
       padding:20px 20px 24px 27px;
     }
   }
 
   // Devise desktop
-  @include respond(desktop){
+  @include respond(desktop) {
     padding: 70px 0 50px;
-    &__title{
+    &__title {
       padding-bottom: 30px;
     }
-    &__wrap-image{
+    &__wrap-image {
       @include size(96px, 96px);
       margin: 47px 0 0 41px;
     }
-    &__wrap-content{
+    &__wrap-content {
       padding:36px 38px 48px 30px;
     }
-    &__division{
+    &__division {
       padding-bottom: 44px;
     }
-    &__description{
+    &__description {
       max-width: 350px;
       padding-bottom: 24px;
     }
