--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,12 +1,15 @@
 .card {
+  // Device phone
   width: 240px;
   text-align: center;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   position: relative;
   opacity: 0.9;
+
   &--silver {
     background-color: $color-primary;
+
     &::after {
       opacity: 0.3;
       @include after-card();
@@ -14,8 +17,10 @@
       background-blend-mode: soft-light;
     }
   }
+
   &--gold {
     background-color: $color-secondary;
+
     &::after {
       opacity: 0.1;
       @include after-card();
@@ -23,6 +28,7 @@
       background-blend-mode: soft-light;
     }
   }
+
   &--platinum {
     background-color: $color-primary;
     opacity: 0.95;
@@ -40,61 +46,75 @@
     line-height: 27px;
     letter-spacing: 0.0555556em;
     padding-top: 15px;
+
     &--gold {
       color: $color-primary;
     }
   }
+
   &__price {
     @include flex-box(flex, center, center);
   }
+
   &__number {
     @include font(36px, 48px);
   }
+
   &__date {
     line-height: 27px;
     letter-spacing: 0.0555556em;
     text-transform: uppercase;
     padding-bottom: 7px;
   }
+
   &__content {
     line-height: 24px;
   }
+
   &__button {
     margin: 20px 0 30px;
     @include size(150px, 34px);
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
     width: 170px;
+
     &__name {
       padding: 22px 0 12px;
     }
+
     &__button {
       @include size(120px, 40px);
     }
   }
 
-  // Devise desktop
+  // Device desktop
   @include respond(desktop) {
     width: 270px;
+
     &__name {
       padding: 40px 0 30px;
       @include font($font-large-desktop, 27px);
     }
+
     &__price {
       padding-bottom: 15px;
     }
+
     &__dollar {
       @include font(24px, 28px);
     }
+
     &__number {
       @include font(64px, 48px);
     }
+
     &__date {
       @include font($font-large-desktop, 27px);
       padding-bottom: 23px;
     }
+
     &__button {
       @include size(198px, 48px);
       margin-top: 30px;
