--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,63 +1,79 @@
 .form {
+  // Device phone
   width: max-content;
   text-align: center;
+
   &__name-email {
     @include flex-box(flex,center,space-between);
     width: 250px;
   }
+
   &__name, &__email {
     width: 115px;
     margin-bottom: 13px;
   }
+
   &__message {
     display: block;
     width: 100%;
     margin-bottom: 13px;
   }
+
   & input {
     border: none;
     border-bottom: solid 1px #7d7d7d;
     color: $color-primary;
   }
+
   &__button {
     height: 25px;
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
+
     &__name-email {
       width: 283px;
     }
+
     &__name, &__email {
       width: 132px;
       margin-bottom: 18px;
     }
+
     &__message {
       margin-bottom: 30px;
     }
+
     & input {
       padding-bottom: 5px;
     }
+
     &__button {
       height: 32px;
     }
   }
 
-  // Devise desktop
+  // Device desktop
   @include respond(desktop) {
+
     &__name-email {
       width: 361px;
     }
+
     &__name, &__email {
       width: 166px;
       margin-bottom: 38px;
     }
+
     &__message {
       margin-bottom: 58px;
     }
+
     & input {
-      @include font($font-large-desktop, 27px)
+      @include font($font-large-desktop, 27px);
     }
+
     &__button {
       @include size(210px, 48px);
     }
