--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,17 +1,22 @@
 .nav {
+  // Device tablet
   &__container {
     @include flex-box(flex, null, space-between);
     width: 350px;
   }
+
   &__link {
     text-transform: uppercase;
     @include font($font-large-tablet, 16px);
     letter-spacing: 0.0832079em;
   }
+
+  // Device desktop
   @include respond(desktop) {
     &__container {
       width: 510px;
     }
+
     &__link {
       @include font($font-large-desktop, 21px);
       letter-spacing: 0.0555556em;
