--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,14 +1,19 @@
 .contact {
+  // Device phone
   padding: 16px 0 25px;
+
   &__wrap-image {
     display: none;
   }
+
   &__title {
     padding-bottom: 12px;
   }
+
   &__detail {
     margin: 20px 0 0;
   }
+
   &__wrap-content {
     @include flex-box(flex,flex-start,null);
     padding-bottom: 10px;
@@ -25,36 +30,33 @@
       margin-right: 11px;
     }
   }
+
   &__content {
     max-width: 226px;
   }
-  &__wrap-social {
+
+  &__social {
     margin-top: 5px;
-    @include flex-box(flex,center,space-between);
     width: 250px;
-    .icon-social {
-      @include size(21px, 19px);
-      cursor: pointer;
-    }
-  }
-  &__google {
-    @include size(31px, 17px);
-    cursor: pointer;
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
     padding: 34px 0 40px;
+
     &__title {
       padding-bottom: 45px;
     }
+
     &__container {
       @include grid(grid, 1fr 1fr);
       grid-column-gap: 30px;
     }
+
     &__detail {
       margin: 0;
     }
+
     &__wrap-content {
       padding-bottom: 15px;
       .icon-location {
@@ -70,35 +72,32 @@
         margin-right: 8px;
       }
     }
-    &__wrap-social {
-      .icon-social {
-        @include size(22px, 22px);
-      }
-    }
-    &__google {
-      @include size(32px, 21px);
-    }
   }
 
-  // Devise Desktop
+  // Device Desktop
   @include respond(desktop) {
     padding: 67px 0 70px;
+
     &__title {
       padding: 70px;
     }
+
     &__container {
       grid-template-columns: 1fr 1fr 1fr;
       grid-column-gap: 100px;
       position: relative;
     }
+
     &__wrap-image {
       display: block;
       position: absolute;
       top: -32%;
     }
+
     &__form {
       grid-column: 2;
     }
+
     &__wrap-content {
       padding-bottom: 23px;
       .icon-location {
@@ -111,18 +110,14 @@
         margin-right: 13px;
       }
     }
+
     &__icon {
       margin-top: 5px;
     }
+
     &__wrap-social {
       margin-top: 20px;
-      width: 280px;
-      .icon-social {
-        @include size(25px, 25px);
-      }
-    }
-    &__google {
-      @include size(36px, 23px);
+      width: 300px;
     }
   }
 }
