--- a/scss/layout/_cta.scss
+++ b/scss/layout/_cta.scss
@@ -1,37 +1,43 @@
 .cta {
-  // Devise phone
+  // Device phone
   padding: 100px 0;
   background: url("../img/cta-background-phone.png");
   background-size: cover;
+
   &__container {
     text-align: center;
   }
+
   &__title {
     padding-bottom: 10px;
   }
+
   &__content {
     max-width: 240px;
     padding-bottom: 20px;
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
     background: url("../img/cta-background-tablet.png");
     background-size: cover;
+
     &__title {
       padding-bottom: 26px;
     }
+
     &__content {
       max-width: 471px;
       padding-bottom: 30px;
     }
   }
 
-  // Devise desktop
+  // Device desktop
   @include respond(desktop) {
     padding: 190px 0;
     background: url("../img/cta-background-desktop.png");
     background-size: cover;
+
     &__content {
       max-width: 555px;
       padding-bottom: 40px;
