--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,9 @@
 .header {
-  // Devise phone
+  // Device phone
   background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)),
   url("../img/Bitmap-small.png");
   background-size: cover;
+
   &__container {
     &-navigation {
     @include flex-box(flex, center, space-between);
@@ -10,16 +11,15 @@
     padding: 15px 5% 0;
     width: 100%;
     }
+
     &-logo {
       @include size(53px, 38px);
     }
-    &-icon {
-      width: 95px;
-      @include flex-box(flex, null, space-between);
-    }
-    &-hamburger {
+
+    &-menu {
       width: 53px;
     }
+
     &-video {
       @include size(240px, 140px);
       margin: auto;
@@ -35,20 +35,15 @@
     cursor: pointer;
   }
 
-  &__wrap-icon {
-    @include size(20px, 20px);
-  }
-
-  &__icon {
-    @include size(100%, 100%);
-    cursor: pointer;
+  &__social {
+    width: 95px;
   }
 
   &__nav {
     display: none ;
   }
 
-  &__hamburger {
+  &__menu {
     float: right;
     cursor: pointer;
   }
@@ -61,14 +56,15 @@
 
   &__wrap-play {
     @include size(56px,56px);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      .play-button {
-        @include size(100%, 100%);
-        cursor: pointer;
-      }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    .play-button {
+      @include size(100%, 100%);
+      cursor: pointer;
+    }
   }
   .down-arrow {
     margin: auto;
@@ -76,71 +72,80 @@
     padding: 110px 0 40px;
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
     background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)),
   url("../img/Bitmap-tablet.png");
     background-size: cover;
+
     &__container {
       &-navigation {
         padding: 20px 5% 0;
       }
-      &-hamburger {
+
+      &-menu {
         display: none;
       }
+
       &-video {
         @include size(345px, 200px);
       }
+
       &-logo {
         @include size(80px, 58px);
       }
     }
+
     &__nav {
       display: block;
     }
+
     &__title {
       padding: 55px 16% 35px;
     }
+
     .down-arrow {
       display: none;
     }
+
     &__space {
       padding-bottom: 120px;
     }
   }
 
-  // Devise desktop
+  // Device desktop
   @include respond(desktop) {
     background: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)),
   url("../img/Background-desktop.png");
     background-size: cover;
+
     &__container {
       &-navigation {
         padding: 35px 10% 0;
       }
-      &-icon {
-        width: 165px;
-      }
-      &-hamburger {
-        display: none;
-      }
+
       &-video {
         @include size(555px, 324px);
       }
+
       &-logo {
         @include size(130px, 90px);
       }
     }
-    &__nav {
-      display: block;
+
+    &__social {
+      width: 165px;
     }
+
     &__title {
       padding: 40px 30% 50px;
       line-height: 48px;
     }
+
     &__wrap-play {
       @include size(72px, 72px);
     }
+
     .down-arrow {
       display: block;
       padding: 90px 0 40px;
