--- a/scss/layout/_pricing.scss
+++ b/scss/layout/_pricing.scss
@@ -1,34 +1,40 @@
 .pricing {
-  // devise phone
+  // Device phone
   padding: 50px 0 30px;
   background-color: #F6F6F6;
+
   &__title {
     padding-bottom: 24px;
   }
+
   &__container {
     @include grid(grid, 1fr);
     grid-row-gap: 30px;
     margin: auto;
   }
 
-  // Devise tablet
+  // Device tablet
   @include respond(tablet) {
     padding: 50px 0 80px;
+
     &__title {
       padding-bottom: 32px;
     }
+
     &__container {
       @include grid(grid, 1fr 1fr 1fr);
       grid-column-gap: 43px;
     }
   }
 
-  // Devise desktop
+  // Device desktop
   @include respond(desktop) {
     padding: 70px 0 116px;
+
     &__title {
       padding-bottom: 52px;
     }
+
     &__container {
       grid-column-gap: 68px;
     }
