--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,9 @@
 @import './components/card.scss';
 @import './components/form.scss';
 @import './components/nav.scss';
+@import './components/dot.scss';
+@import './components/social.scss';
+@import './components/pagination.scss';
 
 // Import layout
 @import './layout/header.scss';
